--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -25,6 +25,11 @@
             android:title="@string/travel_history" />
 
         <item
+            android:id="@+id/nav_monitoring"
+            android:icon="@drawable/ic_monitor"
+            android:title="@string/monitoring" />
+
+        <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/ic_settings"
             android:title="@string/settings" />
