--- a/app/src/main/res/drawable/custom_input.xml
+++ b/app/src/main/res/drawable/custom_input.xml
@@ -12,7 +12,7 @@
         <shape android:shape="rectangle">
             <solid android:color="@color/white" />
             <corners android:radius="18dp" />
-            <stroke android:width="2dp" android:color="#434547" />
+            <stroke android:width="2dp" android:color="#85837e" />
         </shape>
     </item>
 </selector>
