--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -14,7 +14,7 @@
             android:id="@+id/imageView2"
             android:layout_width="117dp"
             android:layout_height="128dp"
-            android:layout_marginStart="36dp"
+            android:layout_marginStart="45dp"
             android:layout_marginTop="16dp"
             android:src="@drawable/user"
             app:civ_border_color="#85837e"
@@ -52,9 +52,12 @@
             android:layout_height="70dp"
             android:layout_marginTop="28dp"
             android:background="@drawable/custom_input"
+            android:drawableEnd="@drawable/ic_edit"
             android:ems="10"
-            android:hint="Lastname"
+            android:hint="@string/lastname"
             android:inputType="text"
+            android:paddingStart="18dp"
+            android:paddingEnd="18dp"
             app:layout_constraintEnd_toEndOf="@+id/textView4"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/imageView2"
@@ -66,9 +69,12 @@
             android:layout_height="70dp"
             android:layout_marginTop="30dp"
             android:background="@drawable/custom_input"
+            android:drawableEnd="@drawable/ic_edit"
             android:ems="10"
-            android:hint="Firstname"
+            android:hint="@string/firstname"
             android:inputType="text"
+            android:paddingStart="18dp"
+            android:paddingEnd="18dp"
             app:layout_constraintEnd_toEndOf="@+id/editTextText2"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/editTextText2"
@@ -80,9 +86,12 @@
             android:layout_height="70dp"
             android:layout_marginTop="30dp"
             android:background="@drawable/custom_input"
+            android:drawableEnd="@drawable/ic_edit"
             android:ems="10"
-            android:hint="Middlename"
+            android:hint="@string/middlename"
             android:inputType="text"
+            android:paddingStart="18dp"
+            android:paddingEnd="18dp"
             app:layout_constraintEnd_toEndOf="@+id/editTextText3"
             app:layout_constraintStart_toStartOf="@+id/editTextText3"
             app:layout_constraintTop_toBottomOf="@+id/editTextText3" />
@@ -93,15 +102,17 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:background="@drawable/custom_input"
+            android:paddingStart="18dp"
             app:layout_constraintEnd_toEndOf="@+id/editTextText4"
             app:layout_constraintStart_toStartOf="@+id/editTextText4"
-            app:layout_constraintTop_toBottomOf="@+id/editTextText4">
+            app:layout_constraintTop_toBottomOf="@+id/editTextText4"
+            tools:ignore="RtlSymmetry">
 
             <RadioButton
                 android:id="@+id/radioButton2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Male" />
+                android:text="@string/male" />
 
             <RadioButton
                 android:id="@+id/radioButton"
@@ -116,9 +127,12 @@
             android:layout_height="70dp"
             android:layout_marginTop="30dp"
             android:background="@drawable/custom_input"
+            android:drawableEnd="@drawable/ic_edit"
             android:ems="10"
-            android:hint="Birth Date"
+            android:hint="@string/birth_date"
             android:inputType="text"
+            android:paddingStart="18dp"
+            android:paddingEnd="18dp"
             app:layout_constraintEnd_toEndOf="@+id/radioGroup2"
             app:layout_constraintStart_toStartOf="@+id/radioGroup2"
             app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />
@@ -129,11 +143,16 @@
             android:layout_height="70dp"
             android:layout_marginTop="30dp"
             android:background="@drawable/custom_input"
+            android:drawableEnd="@drawable/ic_edit"
             android:ems="10"
-            android:hint="Address"
+            android:hint="@string/address"
             android:inputType="text"
+            android:paddingStart="18dp"
+            android:paddingEnd="18dp"
+            app:layout_constraintEnd_toEndOf="@+id/editTextText5"
             app:layout_constraintStart_toStartOf="@+id/editTextText5"
-            app:layout_constraintTop_toBottomOf="@+id/editTextText5" />
+            app:layout_constraintTop_toBottomOf="@+id/editTextText5"
+            tools:ignore="HardcodedText" />
 
         <Button
             android:id="@+id/button"
@@ -141,12 +160,13 @@
             android:layout_height="56dp"
             android:layout_marginTop="30dp"
             android:layout_marginBottom="30dp"
-            android:text="SAVE"
+            android:text="@string/save"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/editTextText6"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="@+id/editTextText6"
-            app:layout_constraintTop_toBottomOf="@+id/editTextText6" />
+            app:layout_constraintTop_toBottomOf="@+id/editTextText6"
+            tools:ignore="HardcodedText" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </ScrollView>
