--- a/app/src/main/res/layout/fragment_clubs.xml
+++ b/app/src/main/res/layout/fragment_clubs.xml
@@ -1,106 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/white">
+    android:background="@drawable/bgcolor">
 
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="16dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="0dp"
+            android:text="@string/our_clubs"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <ImageView
+            android:id="@+id/clubsLogoImageView"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_marginTop="16dp"
+            android:contentDescription="@string/clubs_motor_logo"
+            android:scaleType="centerCrop"
+            android:src="@drawable/clubs_motor_logo__2_"
+            app:srcCompat="@drawable/clubs_motor_logo__2_" />
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="@string/our_motors"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:textColor="@color/white" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="16dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="OUR CLUBS"
-                android:textSize="20sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:text="Looking to connect with like-minded individuals, develop new skills, and make lasting memories? Our clubs offer a diverse range of opportunities to explore your interests and build a sense of belonging. Whether you're passionate about rides or simply seeking a friendly space to unwind, we have a club that's perfect for you."
-                android:textSize="16sp" />
+            android:layout_marginTop="16dp"
+            android:orientation="horizontal">
 
             <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:layout_marginTop="16dp"
-                android:contentDescription="Clubs Motor Logo"
+                android:layout_width="0dp"
+                android:layout_height="100dp"
+                android:layout_weight="1"
+                android:contentDescription="@string/ninja_motorcycle_image"
                 android:scaleType="centerCrop"
-                android:src="@drawable/clubs_motor_logo__2_"
-                app:srcCompat="@drawable/clubs_motor_logo__2_" />
+                android:src="@drawable/ninja"
+                app:srcCompat="@drawable/ninja" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:text="Our_products"
-                android:textSize="20sp"
-                android:textStyle="bold" />
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="100dp"
+                android:layout_marginStart="8dp"
+                android:layout_weight="1"
+                android:contentDescription="@string/ninja_motorcycle_image1"
+                android:scaleType="centerCrop"
+                android:src="@drawable/ninja1"
+                app:srcCompat="@drawable/ninja1" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:orientation="horizontal">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginTop="16dp">
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="123dp"
+                android:layout_weight="1"
+                android:contentDescription="@string/motor"
+                android:scaleType="centerCrop"
+                android:src="@drawable/motor"
+                app:srcCompat="@drawable/motor" />
 
-                <ImageView
-                    android:layout_width="0dp"
-                    android:layout_height="100dp"
-                    android:layout_weight="1"
-                    android:contentDescription="Ninja motorcycle image"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/ninja"
-                    app:srcCompat="@drawable/ninja" />
-
-                <ImageView
-                    android:layout_width="0dp"
-                    android:layout_height="100dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_weight="1"
-                    android:contentDescription="Ninja motorcycle image"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/ninja2"
-                    app:srcCompat="@drawable/ninja2" />
-
-            </LinearLayout>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:text="Contact Us"
-                android:textSize="20sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:text="Address: 123 Main Street, City, State, Zip"
-                android:textSize="16sp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:text="Phone: (123) 456-7890"
-                android:textSize="16sp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:text="Email: info@intelliboysmotor.com"
-                android:textSize="16sp" />
-
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="123dp"
+                android:layout_weight="1"
+                android:contentDescription="@string/motor1"
+                android:scaleType="centerCrop"
+                android:src="@drawable/motor1"
+                app:srcCompat="@drawable/motor1" />
         </LinearLayout>
 
 
-
-</RelativeLayout>
+    </LinearLayout>
+</ScrollView>
