--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -16,7 +16,7 @@
 
         <item
             android:id="@+id/nav_accident_history"
-            android:icon="@drawable/ic_warning"
+            android:icon="@drawable/ic_accident_history"
             android:title="@string/accident_history" />
 
         <item
