--- a/app/src/main/res/layout/create_club.xml
+++ b/app/src/main/res/layout/create_club.xml
@@ -1,6 +1,44 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="16dp">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <EditText
+        android:id="@+id/clubName"
+        android:layout_width="384dp"
+        android:layout_height="50dp"
+        android:autofillHints="Name"
+        android:hint="@string/enter_club_name"
+        android:inputType="text" />
+
+    <EditText
+        android:id="@+id/clubTheme"
+        android:layout_width="383dp"
+        android:layout_height="50dp"
+        android:autofillHints="Theme"
+        android:hint="@string/enter_club_theme"
+        android:inputType="text" />
+
+    <Button
+        android:id="@+id/chooseLogoButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/choose_logo"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"/>
+
+    <ImageView
+        android:id="@+id/clubLogo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/club_logo"
+        android:visibility="gone" />
+
+    <Button
+        android:id="@+id/createClubButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/create_club"
+        android:layout_gravity="center"/>
+</LinearLayout>
