home-nav 2nd revised

--- a/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/app/src/main/res/layout/fragment_forgot_password.xml
@@ -6,108 +6,60 @@
     android:layout_height="match_parent">
 
     <EditText
-        android:id="@+id/emailOtpEditTxt"
+        android:id="@+id/fgpEmailOtpEditTxt"
         android:layout_width="353dp"
         android:layout_height="70dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginBottom="16dp"
         android:background="@drawable/custom_input"
         android:ems="10"
-        android:hint="Email OTP"
+        android:hint="New Password"
         android:inputType="numberSigned"
         android:maxLength="6"
         android:padding="18dp"
         android:paddingLeft="18dp"
+        app:layout_constraintBottom_toTopOf="@+id/fgpSmsOtpEditTxt"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
-
-    <TextView
-        android:id="@+id/resendEmailOtpLbl"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="RESEND OTP"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="@+id/emailOtpEditTxt"
-        app:layout_constraintHorizontal_bias="0.06"
-        app:layout_constraintStart_toStartOf="@+id/emailOtpEditTxt"
-        app:layout_constraintTop_toBottomOf="@+id/emailOtpEditTxt" />
-
-    <TextView
-        android:id="@+id/emailOtpTimer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="30"
-        android:textColor="#E83A3A"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="@+id/emailOtpEditTxt"
-        app:layout_constraintHorizontal_bias="0.972"
-        app:layout_constraintStart_toStartOf="@+id/emailOtpEditTxt"
-        app:layout_constraintTop_toBottomOf="@+id/emailOtpEditTxt" />
+        app:layout_constraintHorizontal_bias="0.482"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
-        android:id="@+id/smsOtpEditTxt"
+        android:id="@+id/fgpSmsOtpEditTxt"
         android:layout_width="351dp"
         android:layout_height="70dp"
-        android:layout_marginTop="84dp"
+        android:layout_marginBottom="24dp"
         android:background="@drawable/custom_input"
         android:ems="10"
-        android:hint="SMS OTP"
+        android:hint="Confirm Password"
         android:inputType="numberSigned"
         android:maxLength="6"
         android:padding="18dp"
         android:paddingLeft="18dp"
-        app:layout_constraintEnd_toEndOf="@+id/emailOtpEditTxt"
-        app:layout_constraintStart_toStartOf="@+id/emailOtpEditTxt"
-        app:layout_constraintTop_toBottomOf="@+id/emailOtpEditTxt" />
-
-    <TextView
-        android:id="@+id/resendSmsOtpLbl"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="RESEND OTP"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="@+id/smsOtpEditTxt"
-        app:layout_constraintHorizontal_bias="0.057"
-        app:layout_constraintStart_toStartOf="@+id/smsOtpEditTxt"
-        app:layout_constraintTop_toBottomOf="@+id/smsOtpEditTxt" />
-
-    <TextView
-        android:id="@+id/smsOtpTimer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="30"
-        android:textColor="#E83A3A"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="@+id/smsOtpEditTxt"
-        app:layout_constraintHorizontal_bias="0.975"
-        app:layout_constraintStart_toStartOf="@+id/smsOtpEditTxt"
-        app:layout_constraintTop_toBottomOf="@+id/smsOtpEditTxt" />
+        app:layout_constraintBottom_toTopOf="@+id/fgpSubmitOtpBtn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/submitOtpBtn"
+        android:id="@+id/fgpSubmitOtpBtn"
         android:layout_width="130dp"
         android:layout_height="60dp"
-        android:layout_marginTop="76dp"
-        android:layout_marginEnd="36dp"
+        android:layout_marginBottom="384dp"
         android:text="SUBMIT"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/smsOtpEditTxt" />
+        app:layout_constraintHorizontal_bias="0.893"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
-        android:text="VERIFICATION"
+        android:text="CHANGED PASSWORD"
         android:textSize="25sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/fgpEmailOtpEditTxt"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.292" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
