--- a/app/src/main/res/layout/fragment_search_account.xml
+++ b/app/src/main/res/layout/fragment_search_account.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <EditText
-        android:id="@+id/editTextText"
+        android:id="@+id/searchAccountEditTxt"
         android:layout_width="330dp"
         android:layout_height="70dp"
         android:layout_marginBottom="20dp"
@@ -16,7 +16,9 @@
         android:ems="10"
         android:hint="Email"
         android:inputType="text"
+        android:maxLength="48"
         android:paddingStart="12dp"
+        android:paddingEnd="18dp"
         app:layout_constraintBottom_toTopOf="@+id/searchAccountBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.493"
@@ -28,6 +30,7 @@
         android:layout_width="128dp"
         android:layout_height="52dp"
         android:layout_marginBottom="556dp"
+        android:enabled="false"
         android:text="Search"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -40,7 +43,7 @@
         android:layout_height="wrap_content"
         android:text="FORGOT PASSWORD"
         android:textSize="25sp"
-        app:layout_constraintBottom_toTopOf="@+id/editTextText"
+        app:layout_constraintBottom_toTopOf="@+id/searchAccountEditTxt"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
