--- a/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/app/src/main/res/layout/fragment_forgot_password.xml
@@ -1,48 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <EditText
-        android:id="@+id/fgpEmailOtpEditTxt"
+        android:id="@+id/fgpNewPassEditTxt"
         android:layout_width="353dp"
         android:layout_height="70dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/custom_input"
         android:ems="10"
         android:hint="New Password"
-        android:inputType="numberSigned"
-        android:maxLength="6"
+        android:inputType="text|textPassword"
+        android:maxLength="32"
         android:padding="18dp"
         android:paddingLeft="18dp"
-        app:layout_constraintBottom_toTopOf="@+id/fgpSmsOtpEditTxt"
+        app:layout_constraintBottom_toTopOf="@+id/fgpConfirmPassEditTxt"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.482"
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
-        android:id="@+id/fgpSmsOtpEditTxt"
+        android:id="@+id/fgpConfirmPassEditTxt"
         android:layout_width="351dp"
         android:layout_height="70dp"
         android:layout_marginBottom="24dp"
         android:background="@drawable/custom_input"
         android:ems="10"
         android:hint="Confirm Password"
-        android:inputType="numberSigned"
-        android:maxLength="6"
+        android:inputType="text|textPassword|textAutoCorrect"
+        android:maxLength="32"
         android:padding="18dp"
         android:paddingLeft="18dp"
-        app:layout_constraintBottom_toTopOf="@+id/fgpSubmitOtpBtn"
+        app:layout_constraintBottom_toTopOf="@+id/fgpSubmitBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/fgpSubmitOtpBtn"
+        android:id="@+id/fgpSubmitBtn"
         android:layout_width="130dp"
         android:layout_height="60dp"
         android:layout_marginBottom="384dp"
+        android:enabled="false"
         android:text="SUBMIT"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -56,7 +56,7 @@
         android:text="CHANGED PASSWORD"
         android:textSize="25sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/fgpEmailOtpEditTxt"
+        app:layout_constraintBottom_toTopOf="@+id/fgpNewPassEditTxt"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
